# lectionary-engines

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  VOICE_PROMPT.md  pyproject.toml  render.yaml  requirements-web.txt  requirements.txt  test_palimpsest.py  test_preferences.py  test_threshold.py
lectionary_engines/: __init__.py  __main__.py  claude_client.py  cli.py  config.py  preferences.py  protocol_builder.py  text_fetcher.py  validation.py
lectionary_engines/engines/: base.py  collision.py  palimpsest.py  threshold.py
lectionary_engines/protocols/: collision_protocol.py  palimpsest_protocol.py  threshold_protocol.py  validation_protocol.py
lectionary_engines/utils/: storage.py  terminal.py
web/: __main__.py  app.py  config.py  database.py  models.py
web/migrations/: 001_add_user_profiles.py
web/routes/: profiles.py  studies.py
web/services/: study_generator.py
web/static/css/: styles.css
web/templates/: base.html  browse.html  generate.html  index.html  study.html
